<resources>
    <string name="app_name">Ciudades Mysql</string>
    <string name="mostrar_ciudades">Mostrar Ciudades</string>
    <string name="nombre">Nombre</string>
    <string name="guardar_provincia">Guardar Provincia</string>
    <string name="borrar_provincia">Borrar Provincia</string>
    <string name="nombre_item_provincia">nombre item provincia</string>
    <string name="valor_item_provincia">Valor Item Provincia</string>
    <string name="item_provincia">item provincia</string>
    <string name="actualizar_provincia">Actualizar Provincia</string>
    <string name="siguiente">Siguiente</string>
    <string name="id_provincia">Id Provincia</string>
    <string name="nombre_provincia">Nombre provincia</string>
    <string name="id_hint_provincia">id Provincia</string>
    <string name="actualizar_hint_provincia">Actualizar Provincia</string>
    <string name="nombre_hint_provincia">Nombre Provincia</string>
    <string name="txt_nombre_provinciaa">Nombre provincia</string>
    <string name="txt_id_provinciaa">id Provincia</string>
    <string name="listaciudades">Lista de ciudades</string>
    <string name="img_ciudad">Ciudad</string>
    <string name="provincia">Provincia:</string>
    <string name="habitantes">Habitantes:</string>
    <string name="nueva_provincia">Nueva Provincia</string>
    <string name="img_add_ciudad">img_add_ciudad</string>
    <string name="nueva_ciudad">Nueva Ciudad</string>
    <string name="guardar_ciudad">Guardar Ciudad</string>
    <string name="imagen_dealle_ciudad">Detalle Ciudad</string>
    <string name="nombre_ciudad">Nombre Ciudad</string>
    <string name="habitantes_ciudad">Habitantes Ciudad</string>
    <string name="id_provincia_ciudad">Id Provincia Ciudad</string>
    <string name="descripcion_plus">descripcion plus</string>
    <string name="descripcion_imagen1">descripcion_imagen1</string>
    <string name="descripcion_reload">descripcion_reload</string>
    <string name="nombre_ciudad1">Nombre ciudad</string>
    <string name="detalles_de_la_ciudad">Detalles de la Ciudad</string>
    <string name="habitantes1">habitantes</string>
    <string name="provincia1">Provincia</string>
    <string name="foto_ciudad">foto ciudad</string>
</resources>