<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="185dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/img_ciudad"
        app:srcCompat="@drawable/ciudad1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_rv_nombrec"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/nombre_ciudad"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_rv_habitantes"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/habitantes" />

        <TextView
            android:id="@+id/txt_rv_provincia"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/provincia" />
    </LinearLayout>
</LinearLayout>